kubernetes/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: flask-namespace
spec:
  serviceName: "postgres-db"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-pv
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-pv
          persistentVolumeClaim:
            claimName: postgres-pv-claim
  volumeClaimTemplates:
    - metadata:
        name: postgres-pv
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
