kubernetes/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: flask-namespace
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-db
