kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-namespace
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
